fixed width on mobile date picker menu

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,6 @@
     color: #e2e8f0;
     font-weight: 600;
     font-style: normal;
+    white-space: nowrap;
   }
 }
